@@ -14,6 +14,7 @@ Version 0.4h
  - Dates
 * Expanded on the time that Cveta will allow you to talk to her
 * Changed the names of some items.
+* Nagazm updated with new effects. Among other things, it can now make you a herm. Thanks KeratinStench on Github for your contribution!
 
 --------------------------------------------
              PREVIOUS VERSIONS
